welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:1: error: type mismatch;
 found   : Int(20)
 required: Boolean
def in1020(a:Int, b:Int):Boolean = {if ((10<=a<=20) || (10<=b<=20)) {true} else {false}} 
                                                ^in1020:1: error: type mismatch;
 found   : Int(20)
 required: Boolean
def in1020(a:Int, b:Int):Boolean = {if ((10<=a<=20) || (10<=b<=20)) {true} else {false}} 
                                                               ^